[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://ui/MenuLayer.gd" type="Script" id=2]
[ext_resource path="res://fonts/font_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/PlayButton.png" type="Texture" id=4]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -272.0
margin_right = 138.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="GameOverMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -150.0
margin_right = 146.0
margin_bottom = 154.0
custom_constants/separation = 60

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_right = 292.0
margin_bottom = 49.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Score: 0"
align = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 109.0
margin_right = 292.0
margin_bottom = 158.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Best: 0"
align = 1

[node name="RestartButton" type="TextureButton" parent="GameOverMenu/VBoxContainer"]
margin_top = 218.0
margin_right = 292.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]
